--- a/src/main/webapp/app/managerRH_accueil.html
+++ b/src/main/webapp/app/managerRH_accueil.html
@@ -182,7 +182,7 @@
                                             </div>
                                             <div class="details">
                                                 <div class="title">
-                                                    <a href="#affecterProjectModal" data-toggle="modal">{{c.nomUtilisateur}}</a> - {{c.posteActuelCollaborateur}}
+                                                    <a href="#affecterProjectModal" ng-click="action.affecterProjet(c.idUtilisateur)" data-toggle="modal">{{c.nomUtilisateur}}</a> - {{c.posteActuelCollaborateur}}
                                                 </div>
                                             </div>
                                         </li>
@@ -227,7 +227,7 @@
                                             <div class="col-xs-6">
                                                 <h5>{{obj.collaborateur.nomUtilisateur}}</h5>
                                                 <span>
-                                                    <a href="#updateObjectifModal" data-toggle="modal" class="small">{{obj.nomObjectif}}</a>
+                                                    <a href="#updateObjectifModal" ng-click="action.modifierObjectif(obj)" data-toggle="modal" class="small">{{obj.nomObjectif}}</a>
                                                 </span>
                                             </div>
                                             <div class="col-xs-1">
@@ -236,7 +236,7 @@
                                                 </a>
                                             </div>
                                             <div class="col-xs-1">
-                                                <a class="dir-like" href="#" title="supprimerObjectif(obj.idObjectif)">
+                                                <a class="dir-like" href="#" title="supprimer" ng-click="supprimerObjectif(obj.idObjectif)">
                                                     <i class="fa fa-trash-o"></i>
                                                 </a>
                                             </div>
@@ -249,7 +249,7 @@
                     </div>
                 </div>
                 <!-- Modal affecter project -->
-                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" 
+                <div ng-controller="affecterProjetsController" aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1"
                      id="affecterProjectModal" class="modal fade">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -280,6 +280,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <input ng-model="idCollab" ng-hide="true">
                                                 <button ng-click="affecterProjet()" type="submit" class="finish btn btn-info btn-sm">
                                                    Affecter les projets</button>
                                             </form>
@@ -322,15 +323,15 @@
                                                                 <div class="form-group">
                                                                     <label for="inputLastName_2" class="col-sm-3 control-label">Description</label>
                                                                     <div class="col-sm-9">
-                                                                   <input ng-model="descriptionObjectif" name="description" class="form-control" type="text">
+                                                                   <input ng-model="descriptifObjectif" name="description" class="form-control" type="text">
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="col-sm-3 control-label">Categorie
                                                                         <span class="text-danger"> *</span></label>
                                                                     <div class="col-sm-9">
-                                                                        <select class="form-control input-sm m-bot15" ng-model="idCategorie"
-                                                                                ng-options="c.idCategorie as c.nomCategorie
+                                                                        <select class="form-control input-sm m-bot15" ng-model="categorie"
+                                                                                ng-options="c as c.nomCategorie
                                                                                      for c in categories">
                                                                         </select>
                                                                     </div>
@@ -350,7 +351,7 @@
                                                                     <tbody>
                                                                         <tr ng-repeat="obj in objectifs">
                                                                             <td>{{obj.nomObjectif}}</td>
-                                                                            <td>{{obj.descriptionObjectif}}</td>
+                                                                            <td>{{obj.descriptifObjectif}}</td>
                                                                             <td>{{obj.categorie.nomCategorie}}</td>
                                                                             <td class="text-center">
                                                                                 <a href="#"  data-placement="top" class="tooltips" data-original-title="Supprimer" >
@@ -378,7 +379,7 @@
                 </div>
                 <!-- modal add Objectif end -->
                 <!-- Modal update Objectif -->
-                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="updateObjectifModal" class="modal fade">
+                <div ng-controller="modifierObjectifController" aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="updateObjectifModal" class="modal fade">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -401,28 +402,27 @@
                                                                     <label for="nomObjectif" class="col-sm-3 control-label">Nom Objectif<span
                                                                        class="text-danger"> *</span></label>
                                                                     <div class="col-sm-9">
-                                                                   <input name="nomObjectif" class="form-control" placeholder="nom" type="text"
+                                                                   <input ng-model="nomObjectif" name="nomObjectif" class="form-control" placeholder="nom" type="text"
                                                                           required>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="inputLastName_2" class="col-sm-3 control-label">Description</label>
                                                                     <div class="col-sm-9">
-                                                                   <input name="description" class="form-control" type="text">
+                                                                   <input ng-model="descriptifObjectif" name="description" class="form-control" type="text">
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label class="col-sm-3 control-label">Categorie
                                                                         <span class="text-danger"> *</span></label>
                                                                     <div class="col-sm-9">
-                                                                        <select name="categorie" class="form-control input-sm m-bot15" required>
-                                                                            <option>Objectif</option>
-                                                                            <option>Expertise</option>
-                                                                            <option>autre</option>
+                                                                        <select class="form-control input-sm m-bot15" ng-model="idCategorie"
+                                                                                ng-options="c.idCategorie as c.nomCategorie
+                                                                                     for c in categories">
                                                                         </select>
                                                                     </div>
                                                                 </div>
-                                                            <button type="submit" class="finish btn btn-info btn-sm"> 
+                                                            <button ng-click="modifier()" type="submit" class="finish btn btn-info btn-sm">
                                                                 Mise à jour</button>
                                                         </form>
                                                     </div>
@@ -453,8 +453,11 @@
     <script type="text/javascript"  src="bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+    <script src="isteven-multi-select.js"></script>
     <script type="text/javascript" src="controllers/managerRH/managerRhAccueilController.js"></script>
     <script type="text/javascript" src="controllers/managerRH/ajouterObjectifsController.js"></script>
+    <script type="text/javascript" src="controllers/managerRH/affecterProjetsController.js"></script>
+    <script type="text/javascript" src="controllers/managerRH/modifierObjectifController.js"></script>
     <script type="text/javascript" src="services/constants.js"></script>
     <script type="text/javascript" src="services/dao.js"></script>
     <script type="text/javascript" src="services/utils.js"></script>
@@ -472,7 +475,7 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.stepy.js"></script>
 
-    <script src="isteven-multi-select.js"></script>
+
 
     <!--ios7 *********-->
 <script src="js/ios-switch/switchery.js" ></script>
