--- a/src/main/webapp/app/managerRH_accueil.html
+++ b/src/main/webapp/app/managerRH_accueil.html
@@ -281,7 +281,7 @@
                                                     </div>
                                                 </div>
                                                 <input ng-model="idCollab" ng-hide="true">
-                                                <button ng-click="affecterProjet()" type="submit" class="finish btn btn-info btn-sm">
+                                                <button ng-click="affecterProjet(true)" type="submit" class="finish btn btn-info btn-sm">
                                                    Affecter les projets</button>
                                             </form>
                                         </div>
